# shishbox

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: docker.yml
backend/: Cargo.toml
backend/src/: main.rs  player.rs  room.rs
frontend/: package-lock.json  package.json  package.json.pwa
frontend/src/: index.html  shishbox.d.ts  shishbox.tsx
frontend/src/lib/: sentences.tsx
frontend/src/screens/: base.tsx  lobby.tsx  login.tsx  wd.tsx
frontend/src/static/: style.scss
src/: index.html  shishbox.d.ts  shishbox.tsx
src/screens/: base.tsx  login.tsx  wd.tsx
src/static/: Makefile  style.scss
