[package]
name = "shishbox-be"
version = "0.1.0"
authors = ["Shish <shish@shishnet.org>"]
edition = "2018"

[dependencies]
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
futures = "*"
pretty_env_logger = "*"